package edu.hitsz.shoot;

import edu.hitsz.aircraft.AbstractAircraft;
import edu.hitsz.bullet.BaseBullet;
import edu.hitsz.bullet.HeroBullet;
import java.util.LinkedList;
import java.util.List;

public class ScatterShoot implements ShootStrategy {
    @Override
    public List<BaseBullet> shoot(AbstractAircraft aircraft) {
        List<BaseBullet> res = new LinkedList<>();
        int x = aircraft.getLocationX();
        int y = aircraft.getLocationY() - aircraft.getImageHeight() / 2;
        int speedY = aircraft.getSpeedY() - 5;
        res.add(new HeroBullet(x - 15, y, -2, speedY, 30));
        res.add(new HeroBullet(x, y, 0, speedY, 30));
        res.add(new HeroBullet(x + 15, y, 2, speedY, 30));
        return res;
    }
}